src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.beachhacks-logo{
  height:40vmin; 
  margin-top:20vh;
}

#sponsors{
  background-color:#ffffff;
}
  
#sponsors .sponsor{
  height:20vmin;
}

#sponsors .sponsor-wide{
    width:50vmin;
    padding:5vmin;
  }

.s-container{
  width:100%;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.apply-button{
  font-size: 1.5rem;
  font-weight: 700;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  padding: .25rem 2.5rem;
  border-radius: 2rem;
  cursor: pointer;
  color: #2475b9;
  background-color: #ffffff;
  border: .4rem solid #fff;
  transition: .25s ease-in-out;
  margin-top: 2rem;
  font-family: adelle,serif;
  font-weight: 400;
  font-style: normal; 
}

.futura {
  font-family:"futura-pt";
}
a:hover{
  text-decoration:none;
}

#faq {
  background-color: #2475b9; }
  #faq .contents {
    padding: 10px 10%;
    text-align: center;
    font-size: 20px;
    font-family:"futura-pt";
    }
  #faq h3 {
    text-align: center;
    font-size: 3em;
    text-transform: uppercase;
    letter-spacing: .03em;
    margin-bottom: 30px; }
  #faq .faqcolumn {
    width: 45%;
    display: inline-block;
    margin: 0px 1%;
    vertical-align: top;
    }
  #faq .drop-element {
    text-align: left;
    margin-bottom: 20px;
    }
  #faq .header {
    background-color: #fff;
    color: #2475b9;
    padding: 20px 20px 14px 20px;
    cursor: pointer;
    border-radius:2rem;
    font-family: adelle,serif;
    font-weight: 400;
    font-style: normal; 
    }
  #faq .header:after {
    color: #2475b9;
    -webkit-font-smoothing: antialiased;
    content: ">";
    position: relative;
    float: right;
    font-size: 1em;
    font-weight: bold;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    }
  #faq .body {
    /* border: 3px solid #fff; */
    padding: 0px 20px;
    max-height: 0;
    overflow-y: hidden;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
    -webkit-transition-timing-function: ease-out;
    -moz-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
    padding-right: 2em;
    font-family:"futura-pt"
  }
    #faq .body a {
      color: #fff; }
  #faq .active {
    padding: 20px;
    max-height: 100%; }
  #faq .flipArrow:after {
    -webkit-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
    }

    #header{
      font-family: adelle,serif;
      font-weight: 400;
      font-style: normal; 
    }

    .faq-header{
      font-size:4em;
      font-family:'futura-pt-bold';
    }

    .sponsor-header{
      margin-top:5vh;
      font-size:3em;
      font-family:'futura-pt-bold';
      color:#2475b9;
    }

    .sponsor-body{
      font-family: adelle,serif;
      font-weight: 400;
      font-style: normal; 
      color:#000000;
    }

    .walter-icon{
      height:5vmin;
      margin-right:10px;
      max-width: 100%;
      width: auto\9;
    }

    .navbar-default{
      background-color: #282c34;
      border-color: transparent;
    }

    .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
      background-color: transparent;
    }

    .navbrand{
      height:100%;
      width:100%;
    }
    .navbar-brand{
      padding:0px;
    }

    .beachhacks-nav{
      height: 4vmin;
      width: auto\9;
    }

    .item{
      padding:10px;
      /*margin-top:2px;*/
      font-family: futura-pt,sans-serif;
      font-weight: 600;
      font-style: normal;
    }


    .navbar-right{
      margin-right:0px;
    }
    .navbrand{
      display:block;
    }

    .fit-col{
      width:50%;
    } 


    @media screen and (max-width:769px)
    {
      .navbrand{
        margin-top:10px;
        padding-left: 10px;
      }

      .navbar-toggle{
        display: block;
        float: right;
        margin-top: 13px;
        
      }

      .container>.navbar-collapse{
        margin-right:15px;
      }
      
      .navbar-collapse.collapse{
        display: none !important;
      }

      .nav>li>a{
        padding:10px 0px;
      }

      #info{
        padding-left: 20px;
        padding-right:20px;
      }
    }


    @media screen and (min-width:770px)
    {
      .navbrand{
        margin-top:10px;
        padding-left:10px;
      }
      #info{
        padding-left: 200px;
        padding-right:200px;
      }
      
    }
    
    #info{
      background-color: #E8B985;
      font-family: futura-pt;
      text-align: center;
    }
  
    #info .info-header{
      font-family: futura-bold-pt;
    }

  
    .typeform-popup{
      display:block;
      position:relative;
    }

